objects/ssot__AiAgentInteractionMessage__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AiAgentInteractionId__c</fullName>
        <label>AI Agent Interaction</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiAgentInteractionMessageType__c</fullName>
        <label>AI Agent Interaction Message Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiAgentInteractionMsgContentType__c</fullName>
        <label>Ai Agent Interaction Msg Content Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiAgentSessionId__c</fullName>
        <label>AI Agent Session</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiAgentSessionParticipantId__c</fullName>
        <label>AI Agent Session Participant</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContentText__c</fullName>
        <label>Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>AI Agent Interaction Message Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MessageSentTimestamp__c</fullName>
        <label>Message Sent Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ParentMessageId__c</fullName>
        <label>Parent Message</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SessionOwnerId__c</fullName>
        <label>Session Owner</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SessionOwnerObject__c</fullName>
        <label>Session Owner Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1744306613638_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AiAgentInteractionMessage_AiAgentSes_rel</label>
        <referenceTo>ssot__AiAgentSessionParticipant__dlm</referenceTo>
        <relationshipLabel>AiAgentInteractionMessage_AiAgentSes_rel</relationshipLabel>
        <relationshipName>rel_1744306613638_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1744306619512_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AiAgentInteractionMessage_Individual_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>AiAgentInteractionMessage_Individual_rel</relationshipLabel>
        <relationshipName>rel_1744306619512_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1744306622350_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AiAgentInteractionMessage_ParentMess_rel</label>
        <referenceTo>ssot__AiAgentInteractionMessage__dlm</referenceTo>
        <relationshipLabel>AiAgentInteractionMessage_ParentMess_rel</relationshipLabel>
        <relationshipName>rel_1744306622350_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>